# sylpheed-sylfm

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  NEWS  README.en.txt  README.ja.txt  README.md  build.sh  configure.ac  sylfm.c  sylfm.h  version.rc
po/: ja.po  sylfm.pot
src/: Makefile.am  sylfm.c  sylfm.h
